# openmp-evolutionary-algorithm

./: .gitignore  CMakeLists.txt  Individual.cpp  Individual.h  Population.cpp  Population.h  SConstruct  Utils.cpp  Utils.h  main.cpp  run-openmp.sh  run-parallel.sh  run-sequential.sh  run-single.sh  run.sh
cmake/: Findlog4cxx.cmake
log/: sekwencyjny.txt
results/: po_profilowaniu.xls  po_profilowaniu_O3.xls  przed_profilowaniem.xls  przed_profilowaniem_O3.xls
scripts/: run_4_cases.sh  run_all_and_store_in_excel.py
src/: Individual.cpp  Individual.h  Population.cpp  Population.h  Utils.cpp  Utils.h  main.cpp
test/: IndividualTest.cpp
